# Falcor

./: .gitignore  CMakePresets.json  run_DirectAO.bat  run_GI.bat  run_HybridMeshVoxel.bat  run_MultiBunny_Mesh.bat  run_MultiBunny_Voxel.bat  run_VoxelBunny_Blend.bat  slangdconfig.json
.FORAGENT/: ai_doc_navigation.txt  build_any_target_brief.txt  capture_mainline_directao.py  future_hyrbid_renderer_plan.md  kaity_report_extract.txt  next_agent_prompt_plan5_phase3.txt  plan.md  plan2.md  plan3.md  plan4.md  plan5.md  plan5_phase2_capture.py  plan6_hybrid_execution_mode_split.md  voxel_direct_ao_plan.txt  voxelization_gpu_tool_brief.txt  voxelization_pipeline_brief.txt
Scene/: MultiBunny.pyscene  MultiMultiBunny.pyscene
Scene/Arcade/: Arcade.pyscene
Scene/Box/: CornellBox.pyscene  cornell_box_test.pyscene
Scene/BoxBunny/: BoxBunny.pyscene
Scene/Chandelier/: Chandelier.pyscene
Scene/Dragon/: Dragon.pyscene
Source/RenderPasses/Voxelization/QuickHull/: CMakeLists.txt
Source/Tools/VoxelizationGPU/: CMakeLists.txt  VoxelizationGPU.cpp
docs/: atri111_voxel_latest_status.html  doc_template.html  getting-started.md
resource/: scene.bat
scripts/: Impostor.py  LoadMesh.py  PathTracer.py  Raster.py  RiLoD.py  Voxelization.py  Voxelization_CPU.py  Voxelization_DirectAO.py  Voxelization_GPU.py  Voxelization_HybridMeshVoxel.py  Voxelization_MainlineDirectAO.py  Voxelization_MultiBunny_MeshRoute.py  Voxelization_MultiBunny_VoxelOnly.py  Voxelization_MultiBunny_VoxelRoute.py  Voxelization_VoxelBunny_Blend.py
tools/: make_new_render_pass.py
(+292 files in other folders)
